cors fix attempt 10